tests/src/errors/mod.rs
mod infinite_recursion;
mod recognizer_not_defined;
mod terminal_not_defined;
mod unexisting_symbol;
